test/parser/lexer-errors.si
// RUN: ! silc %s --dump-ast --split-input-file 2>&1 | FileCheck %s

// CHECK: error: unclosed comment; missing `*/`
/* comment
